Created Collection View Cell & Background Image

--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,96 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ui-n5-34P">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="Dhr-q5-aFt"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="bod-PJ-XJX">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="zrK-mB-Ecl"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="SAp-dQ-iM5">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="MVD-f4-92J">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RgC-Nc-umP">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bRJ-3B-82a">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="8lL-P3-QX0">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="4yE-Ow-8Ul"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="reG-sp-iO1">
+                                                    <rect key="frame" x="0.0" y="80" width="105" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="8lL-P3-QX0" firstAttribute="top" secondItem="bRJ-3B-82a" secondAttribute="top" id="6Qz-oT-2S6"/>
+                                            <constraint firstItem="reG-sp-iO1" firstAttribute="top" secondItem="8lL-P3-QX0" secondAttribute="bottom" id="D5j-dI-Qff"/>
+                                            <constraint firstItem="reG-sp-iO1" firstAttribute="leading" secondItem="bRJ-3B-82a" secondAttribute="leading" id="Dxc-UI-XKZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="reG-sp-iO1" secondAttribute="trailing" id="WNc-mP-WnX"/>
+                                            <constraint firstItem="8lL-P3-QX0" firstAttribute="leading" secondItem="bRJ-3B-82a" secondAttribute="leading" id="jPX-Dq-4er"/>
+                                            <constraint firstAttribute="bottom" secondItem="reG-sp-iO1" secondAttribute="bottom" id="kXM-JC-O43"/>
+                                            <constraint firstAttribute="trailing" secondItem="8lL-P3-QX0" secondAttribute="trailing" id="uaa-aW-0zs"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MVD-f4-92J" secondAttribute="bottom" constant="20" id="0Ff-YH-LCG"/>
+                            <constraint firstItem="MVD-f4-92J" firstAttribute="top" secondItem="bod-PJ-XJX" secondAttribute="bottom" constant="20" id="2sn-88-TMG"/>
+                            <constraint firstItem="2Ui-n5-34P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9C3-Jo-RNo"/>
+                            <constraint firstAttribute="trailing" secondItem="bod-PJ-XJX" secondAttribute="trailing" id="BdB-B8-NLB"/>
+                            <constraint firstAttribute="trailing" secondItem="2Ui-n5-34P" secondAttribute="trailing" id="Kaf-Fz-62m"/>
+                            <constraint firstAttribute="trailing" secondItem="MVD-f4-92J" secondAttribute="trailing" constant="20" id="Msj-qe-rES"/>
+                            <constraint firstItem="SAp-dQ-iM5" firstAttribute="top" secondItem="bod-PJ-XJX" secondAttribute="bottom" id="PJt-hj-7jv"/>
+                            <constraint firstItem="bod-PJ-XJX" firstAttribute="top" secondItem="2Ui-n5-34P" secondAttribute="bottom" id="TJq-Ha-1iT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SAp-dQ-iM5" secondAttribute="bottom" id="aQe-3k-pEn"/>
+                            <constraint firstItem="2Ui-n5-34P" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cEL-bq-lue"/>
+                            <constraint firstItem="SAp-dQ-iM5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cHh-xO-3VH"/>
+                            <constraint firstItem="MVD-f4-92J" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="ddr-O1-F6T"/>
+                            <constraint firstItem="bod-PJ-XJX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="m3l-Vf-lbY"/>
+                            <constraint firstAttribute="trailing" secondItem="SAp-dQ-iM5" secondAttribute="trailing" id="pcF-RO-hpK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
