--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -48,14 +48,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bRJ-3B-82a">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="bRJ-3B-82a" customClass="PokeCell" customModule="Pokedex" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="8lL-P3-QX0">
+                                                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="8lL-P3-QX0">
                                                     <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="4yE-Ow-8Ul"/>
@@ -80,6 +80,10 @@
                                             <constraint firstAttribute="bottom" secondItem="reG-sp-iO1" secondAttribute="bottom" id="kXM-JC-O43"/>
                                             <constraint firstAttribute="trailing" secondItem="8lL-P3-QX0" secondAttribute="trailing" id="uaa-aW-0zs"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="reG-sp-iO1" id="U79-yk-Bmf"/>
+                                            <outlet property="thumbImg" destination="8lL-P3-QX0" id="1Od-P7-B8p"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -102,6 +106,9 @@
                             <constraint firstAttribute="trailing" secondItem="SAp-dQ-iM5" secondAttribute="trailing" id="pcF-RO-hpK"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="MVD-f4-92J" id="yO9-Wx-IU3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
